# example_startin_c_api

./: CMakeLists.txt  DT.cpp  DT.h  README.md  Triangulation.cpp  Triangulation.h  main.cpp
dependencies/startin/: startin.h
